<resources>
    <string name="app_name">WPMS</string>
    <string name="hello">Hello</string>
    <string name="welcome_bac">Welcome back</string>
    <string name="log_in">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New User Sign Up</string>
    <string name="submit">Submit</string>
    <string name="file">File</string>
    <string name="create_new">Create new</string>
    <string name="open">Open</string>
    <string name="name">Name</string>
    <string name="caregiver">Caregiver</string>
    <string name="patient">Patient</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
